--- a/package.json
+++ b/package.json
@@ -7,27 +7,21 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@steveeeie/react-page-transition": "^1.2.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "apollo-boost": "^0.4.9",
-    "apollo-link-context": "^1.0.20",
     "fontsource-roboto": "^2.1.4",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
-    "react-contextmenu": "^2.14.0",
     "react-dom": "^16.13.1",
     "react-flow-renderer": "^3.2.4",
     "react-helmet": "^6.1.0",
     "react-latex": "^2.0.0",
-    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "subscriptions-transport-ws": "^0.9.17",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
